--- a/SNN_1_Shot_Recognition.ipynb
+++ b/SNN_1_Shot_Recognition.ipynb
@@ -973,10 +973,182 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "#Training\n",
+        "\n",
+        "We will setup loss and optimizer, nerual network will try to minimize loss. Optimizer will help us perform backpropagation through our custom neural network. Then we will establish checkpoints, which is essentially if we screw up somehow in our neural network  as we are training, we have got something like a placeholder  to go back to reload our neural network from. We are then going to build our train step function which effectively defines what happens when we train on a single batch. Basic process is that we use our model, we pass through some data, we get some prediction, we the calculate the loss.  We calculate loss using binary entropy, then we calculate gradients of all our weights across the network. We then use our optimizer to effectively backpropagate to minimize that loss to get it to smallest possible. Our training loop is effectively going through every single batch for every single epoch and applying our training step. So training loop get applied over every batch. Our training loop does it over the entire dataset over the entire set of epochs. Then we will train the model."
+      ],
       "metadata": {
-        "id": "koUBdh2-ICUv"
+        "id": "_FPfp9KprErp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Setup loss and optimizer"
+      ],
+      "metadata": {
+        "id": "1x0C-fKHtjgV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "binary_cross_loss = tf.loss.BinaryCrossEntropy()"
+      ],
+      "metadata": {
+        "id": "R7NY0cYuto9b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "opt = tf.keras.optimizers.Adam(1e-4) # 0.0001 - learning rate ; there are also other lots of optimizers"
+      ],
+      "metadata": {
+        "id": "pwvnCu_CtyNH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Establish Checkpoints"
+      ],
+      "metadata": {
+        "id": "TcD5YOi-uPe2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "checkpoint_dir = './training_checkpoints' #created folder in same repo\n",
+        "checkpoint_prefix = os.path.join(checkpoint_dir, 'ckpt') #prefix everything with ckpt\n",
+        "checkpoint = tf.train.Checkpoint(opt=opt, siamese_model=siamese_model)  #saving these two components as checkpoints , optimizer and model"
+      ],
+      "metadata": {
+        "id": "DYj0E9PduSpK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Build train step function\n",
+        "\n",
+        "this is what is going to be used to train on one batch of data . So effectively, what happens is one batch of data comes through to our training step, we go and make our prediction, we calculate our loss, we go and calculate our gradients and then we apply backpropagation through our neural network to get the best possible model\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "PWSH2b51vr9u"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "@tf.function #wrapping function in this decorator, because it goes and compiles this specific training function into a callable tensorflowgraph\n",
+        "#and allows us to go and train it in an efficient manner. .\n",
+        "\n",
+        "def train_step(batch):\n",
+        "\n",
+        "    # Record all of our operations\n",
+        "    with tf.GradientTape() as tape:      #this allows us to capture gradients from our neural network model\n",
+        "        # Get anchor and positive/negative image\n",
+        "        X = batch[:2].\n",
+        "        # Get label\n",
+        "        y = batch[2]\n",
+        "\n",
+        "        # Forward pass\n",
+        "        yhat = siamese_model(X, training=True)\n",
+        "        # Calculate loss\n",
+        "        loss = binary_cross_loss(y, yhat)\n",
+        "    print(loss)\n",
+        "\n",
+        "    # Calculate gradients\n",
+        "    grad = tape.gradient(loss, siamese_model.trainable_variables)\n",
+        "\n",
+        "    # Calculate updated weights and apply to siamese model\n",
+        "    opt.apply_gradients(zip(grad, siamese_model.trainable_variables))\n",
+        "\n",
+        "\n",
+        "    #In a nutshell, the last two lines are first up calculate all the gradients of different weights within our specific model with respect to our loss.\n",
+        "    #Then our optimizer is actually applying our learning rate and   slightly reducing the loss by changing our weights to be a little bit closer to\n",
+        "\n",
+        "    # Return loss\n",
+        "    return loss"
+      ],
+      "metadata": {
+        "id": "5rh2jmJVvu0G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Build training loop"
+      ],
+      "metadata": {
+        "id": "DroKfgYR04j0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import metric calculations\n",
+        "from tensorflow.keras.metrics import Precision, Recall\n",
+        "def train(data, EPOCHS):\n",
+        "    # Loop through epochs\n",
+        "    for epoch in range(1, EPOCHS+1):\n",
+        "        print('\\n Epoch {}/{}'.format(epoch, EPOCHS))\n",
+        "        progbar = tf.keras.utils.Progbar(len(data))\n",
+        "\n",
+        "        # Creating a metric object\n",
+        "        r = Recall()\n",
+        "        p = Precision()\n",
+        "\n",
+        "        # Loop through each batch\n",
+        "        for idx, batch in enumerate(data):\n",
+        "            # Run train step here\n",
+        "            loss = train_step(batch)\n",
+        "            yhat = siamese_model.predict(batch[:2])\n",
+        "            r.update_state(batch[2], yhat)\n",
+        "            p.update_state(batch[2], yhat)\n",
+        "            progbar.update(idx+1)\n",
+        "        print(loss.numpy(), r.result().numpy(), p.result().numpy())\n",
+        "\n",
+        "        # Save checkpoints\n",
+        "        if epoch % 10 == 0:\n",
+        "            checkpoint.save(file_prefix=checkpoint_prefix)"
+      ],
+      "metadata": {
+        "id": "8LovDLBH09MM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Train the model"
+      ],
+      "metadata": {
+        "id": "gJHnFmUb2IFL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "EPOCHS = 50\n",
+        "train(train_data, EPOCHS)"
+      ],
+      "metadata": {
+        "id": "5ctwLTJe2Jmb"
       },
       "execution_count": null,
       "outputs": []
